[gd_scene load_steps=4 format=3 uid="uid://b3oy3dwght1qq"]

[ext_resource type="Script" uid="uid://cajwem5vld680" path="res://Scripts/unit.gd" id="1_ta3r2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta3r2"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mthqy"]
size = Vector2(21, 28)

[node name="Unit" type="CharacterBody2D" groups=["Unit"]]
scale = Vector2(0.5, 0.5)
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ta3r2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ta3r2")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mthqy")

[node name="Nav" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Nav"]
wait_time = 0.1

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Nav"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Nav/Timer" to="." method="_on_timer_timeout"]
